--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -19,6 +19,10 @@ lua << EOF
     vim.fn.sign_define(hl, { text = icon, texthl = hl, numhl = hl })
   end
 
+  vim.diagnostic.config({
+    update_in_insert = true,
+  })
+
   mason.setup({
     automatic_installation = true,
     ui = {
