--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -9,6 +9,9 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'ryota2357/dein-snip.lua'
+
+[[plugins]]
 repo = 'vim-denops/denops.vim'
 hook_add = '''
   let g:denops_server_addr = '127.0.0.1:32123'
