--- a/tmux/config/status.tmux.conf
+++ b/tmux/config/status.tmux.conf
@@ -34,14 +34,14 @@ set-option -g status-right "#[bg="#707070"]   #h   #{online_status}  #{bat
 set -g @online_icon "#[fg="#80e27e"] #[fg="#ffffff"]"
 set -g @offline_icon "#[fg="#ff6f60"] #[fg="#ffffff"]"
 
-set -g @batt_color_charge_primary_tier8 "#00e676" # [95%-100%]
+set -g @batt_color_charge_primary_tier8 "#4caf50" # [95%-100%]
 set -g @batt_color_charge_primary_tier7 "#80e27e" # [80%-95%)
 set -g @batt_color_charge_primary_tier6 "#80e27e" # [65%-80%)
 set -g @batt_color_charge_primary_tier5 "#bef67a" # [50%-65%)
 set -g @batt_color_charge_primary_tier4 "#bef67a" # [35%-50%)
 set -g @batt_color_charge_primary_tier3 "#ffeb3b" # [20%-35%)
 set -g @batt_color_charge_primary_tier2 "#ffeb3b" # (5%-20%)
-set -g @batt_color_charge_primary_tier1 "#ff5722" # [0%-5%]
+set -g @batt_color_charge_primary_tier1 "#ff0000" # [0%-5%]
 set -g @batt_color_charge_secondary_tier8 "#707070"
 set -g @batt_color_charge_secondary_tier7 "#707070"
 set -g @batt_color_charge_secondary_tier6 "#707070"
@@ -51,8 +51,10 @@ set -g @batt_color_charge_secondary_tier3 "#707070"
 set -g @batt_color_charge_secondary_tier2 "#707070"
 set -g @batt_color_charge_secondary_tier1 "#707070"
 
-set -g @batt_color_status_primary_charging "#5fd5ff"
+set -g @batt_color_status_primary_charging "#5ddef4"
 set -g @batt_color_status_secondary_charging "#707070"
+set -g @batt_color_status_primary_charged "#039be5"
+set -g @batt_color_status_secondary_charged "#707070"
 
 set -g @batt_icon_charge_tier8 " " # [95%-100%]
 set -g @batt_icon_charge_tier7 " " # [80%-95%)
@@ -63,4 +65,5 @@ set -g @batt_icon_charge_tier3 " " # [20%-35%)
 set -g @batt_icon_charge_tier2 " " # (5%-20%)
 set -g @batt_icon_charge_tier1 " " # [0%-5%]
 set -g @batt_icon_status_charging " "
+set -g @batt_icon_status_charged " "
 
