--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -142,8 +142,8 @@ ddu-ff = '''
 ddu-ff-filter = '''
   inoremap <buffer> <CR>  <Cmd>call ddu#ui#ff#do_action('itemAction', { 'params': {'command': 'drop'} })<CR>
   inoremap <buffer> <C-o> <Cmd>call ddu#ui#ff#do_action('itemAction', { 'params': {'command': 'tab drop'} })<CR>
-  inoremap <buffer> <C-n> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')+1,0)")<CR>
-  inoremap <buffer> <C-p> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')-1,0)")<CR>
+  inoremap <buffer> <C-n> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')+1, 0)")<CR><Cmd>redraw!<CR>
+  inoremap <buffer> <C-p> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')-1, 0)")<CR><Cmd>redraw!<CR>
   inoremap <buffer> <C-q> <Cmd>call ddu#ui#ff#do_action('preview')<CR>
   inoremap <buffer> <ESC> <Cmd>call ddu#ui#ff#do_action('quit')<CR>
 '''
