--- a/vim/rc/dap.toml
+++ b/vim/rc/dap.toml
@@ -2,8 +2,8 @@
 repo = 'mfussenegger/nvim-dap'
 depends = 'nvim-dap-ui'
 hook_source = '''
-hi DapBreakpointTextHl guifg=#AA0000
-hi DapStoppedTextHl guifg=#00c853
+hi DapBreakpointTextHl guifg=#ba000d
+hi DapStoppedTextHl guifg=#bef67a
 lua << EOF
   local dap = require('dap')
   vim.fn.sign_define('DapBreakpoint', { text='', texthl='DapBreakpointTextHl' })
