--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -97,23 +97,21 @@ hook_add = '''
 repo = 'nvim-treesitter/nvim-treesitter'
 on_event = 'BufEnter'
 hook_post_update = 'TSUpdate'
-hook_source = '''
-lua << EOF
-require('nvim-treesitter.configs').setup {
-  ensure_installed = 'all',
-  additional_vim_regex_highlighting = false,
+lua_source = '''
+  require('nvim-treesitter.configs').setup {
+    ensure_installed = 'all',
+    additional_vim_regex_highlighting = false,
 
-  -- m1でエラー出るから
-  ignore_install = { 'phpdoc' },
+    -- m1でエラー出るから
+    ignore_install = { 'phpdoc' },
 
-  -- help : ハイライト変になる
-  -- tex  : snipet挿入後とかでエラーが出る
-  highlight = {
-    enable = true,
-    disable = { 'help', 'latex', 'tex' },
-  },
-}
-EOF
+    -- help : ハイライト変になる
+    -- tex  : snipet挿入後とかでエラーが出る
+    highlight = {
+      enable = true,
+      disable = { 'help', 'latex', 'tex' },
+    },
+  }
 '''
 
 [[plugins]]
@@ -131,11 +129,16 @@ hook_source = '''
 [[plugins]]
 repo = 'lukas-reineke/indent-blankline.nvim'
 on_event = 'BufEnter'
-hook_source = '''
-  highlight IndentBlanklineContextChar guifg=#6E6E6E gui=nocombine
-  lua require'indent_blankline'.setup {
-  \  show_current_context = true,
-  \ }
+lua_add = '''
+  Config.fn.table_insert_pairs(
+      Config.val.custom_hls,
+      { IndentBlanklineContextChar = { fg = '#6e6e6e', nocombine = true } }
+  )
+'''
+lua_source = '''
+  require'indent_blankline'.setup {
+    show_current_context = true,
+  }
 '''
 
 [[plugins]]
@@ -148,12 +151,10 @@ hook_source = '''
 [[plugins]]
 repo = 'petertriho/nvim-scrollbar'
 on_event = 'BufEnter'
-hook_source = '''
-lua << EOF
+lua_source = '''
   require('scrollbar').setup {
     handle = { color = '#4B4B4B' }
   }
-EOF
 '''
 
 [[plugins]]
@@ -181,7 +182,30 @@ hook_add = '''
   nnoremap ? <Cmd>TComment<CR>
 '''
 
-# formatter
+[[plugins]]
+repo = 'skanehira/denops-silicon.vim'
+depends = 'denops.vim'
+on_cmd = 'Silicon'
+hook_add = '''
+  let g:silicon_options = {
+    \  'font': 'Cica',
+    \  'no_line_number': v:false,
+    \  'no_round_corner': v:false,
+    \  'no_window_controls': v:false,
+    \  'background_color': '#303030',
+    \  'line_offset': 1,
+    \  'line_pad': 2,
+    \  'pad_horiz': 80,
+    \  'pad_vert': 100,
+    \  'shadow_blur_radius': 0,
+    \  'shadow_color': '#f6f5f5',
+    \  'shadow_offset_x': 0,
+    \  'shadow_offset_y': 0,
+    \  'tab_width': 4,
+    \  'theme': 'GitHub',
+    \ }
+'''
+
 [[plugins]]
 repo = 'prettier/vim-prettier'
 build = 'npm install'
