--- a/tmux/config/option.tmux.conf
+++ b/tmux/config/option.tmux.conf
@@ -3,6 +3,10 @@ set -g mouse on
 
 # 履歴を長く(バックスクロール行数)
 set -g history-limit 100000
+
 # ウィンドウとペインの番号を 1 から開始
 set -g base-index 1
 set -g pane-base-index 1
+
+# undercurl 対応 (できてないのだが。。。はて)
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
