--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -131,7 +131,8 @@ hook_source = '''
     \   },
     \   'columnParams': {
     \     'icon_filename': {
-    \       'defaultIcon': { 'icon': '' }
+    \       'defaultIcon': { 'icon': '' },
+    \       'useLinkIcon': 'default'
     \     }
     \   },
     \   'filterParams': {
